ags (2.1.37)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed remove message monitor on AgsMachine implementation finalize

ags (2.1.36)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* added missing seekable interface to AgsCaptureWaveChannelRun
	* fixed initial seek in AgsAudiorec
	* fixed wrong format during resample in ags_audio_signal.c
	* fixed wrong format during resample in ags_wave.c
	* fixed desktop-id in gsequencer.appdata.xml

ags (2.1.35)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* implemented AgsMachine signals ::samplerate-changed, ::buffer-size-changed and ::format-changed
	* implemented AgsPad signals ::samplerate-changed, ::buffer-size-changed and ::format-changed
	* implemented AgsLine signals ::samplerate-changed, ::buffer-size-changed and ::format-changed
	* implemented AgsEffectBridge signals ::samplerate-changed, ::buffer-size-changed and ::format-changed
	* implemented AgsEffectPad signals ::samplerate-changed, ::buffer-size-changed and ::format-changed
	* implemented AgsEffectLine signals ::samplerate-changed, ::buffer-size-changed and ::format-changed
	* implemented emitting message of AgsAudio's samplerate, buffer-size and format change
	* implemented emitting message of AgsChannel's samplerate, buffer-size and format change
	* implemented proper resample of AgsAudioSignal as adjusting buffer size and samplerate
	* implemented proper resample of AgsWave as adjusting buffer size and samplerate
	* fixed applying samplerate, buffer size and format to AgsSynthGenerator
	* fixed update AgsSynth and AgsSyncsynth after modifying samplerate
	* fixed adjust loop information to samplerate
	* fixed check if EBADFD available in ags_osc_client.c and ags_osc_connection.c

ags (2.1.34)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* added missing integration test ags_check_system_functional_osc_server_test
	* improved AgsSoundcardEditor use cache option