@@ -1,3 +1,8 @@
+ags (2.1.38)
+
+	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
+	* TODO:JK: implemented ags_buffer_find_position()
+
 ags (2.1.37)
 
 	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
